Refactorizando el para implementar filtros